tests/fixtures/diagnostics/compile-gutter-alignment.ascii.stderr
Error: Undefined variable.
   ,
11 |   color: $nope;
   |          ^^^^^
   '
  compile-gutter-alignment.scss 11:10  root stylesheet
